--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
